@@ -16,7 +16,7 @@
                   android:label="@string/titlePrefs">
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="12" />
+    <uses-sdk android:minSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
