@@ -4,6 +4,8 @@ version 0.84.01
 	Updating lens info database ( exiftool 10.200 )
 	Testing support for K-1
 	Small speedup
+	Increase Android 5 compatibility
+	Android version requires Android 4.1 (http://stackoverflow.com/a/26422855/21348 )
 
 version 0.84.00 ( 2016-05-09 )
 	servermode subcommand: set_shutter_speed, set_iso, usleep
